# lab-chess

./: CMakeLists.txt  Replay.cpp  Scacchiera.cpp
exes/: replay.cpp  scacchiera.cpp
lib/: Alfiere.cpp  Alfiere.h  Cavallo.h  Color.h  Colors.h  Empty.cpp  Empty.h  Game.cpp  Game.h  Pedone.cpp  Re.cpp  Regina.h  Torre.cpp
lib/Color/: Color.h
lib/board/: Board.cpp  Board.h  Square.cpp  Square.h
lib/headers/: Alfiere.h  Board.h  Cavallo.h  Color.h  Empty.h  Game.h  Pedone.h  Piece.h  Re.h  Regina.h  Torre.h
lib/moves/: Move.cpp  Move.h
lib/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
lib/players/: Computer.h  Human.h  Player.cpp  Player.h
lib/sources/: Alfiere.cpp  Board.cpp  Cavallo.cpp  Empty.cpp  Game.cpp  Pedone.cpp  Piece.cpp  Re.cpp  Regina.cpp  Torre.cpp
src/board/: Board.cpp  Board.h
src/color/: Color.cpp  Color.h
src/game/: Game.cpp  Game.h
src/move/: Move.cpp  Move.h
src/piece/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/player/: Computer.cpp  Computer.h  Human.cpp  Human.h  Player.cpp  Player.h
src/scacchiera/: Scacchiera.cpp
src/square/: Square.cpp  Square.h
